--- a/BankManagementSys/ViewAccountInfo.xaml
+++ b/BankManagementSys/ViewAccountInfo.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankManagementSys"
         mc:Ignorable="d"
-        Title="View Account Information" Height="512" Width="859" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
+        Title="View Account Information" Height="512" Width="888" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
     <Window.Resources>
         <Style TargetType="Button">
             <Setter Property="Template">
@@ -66,12 +66,23 @@
         <RadioButton Checked="RadioButton_Checked" Name="rbTransacWithdrawals" GroupName="Transactions" Content="Withdrawals" HorizontalAlignment="Left" Margin="531,118,0,0" VerticalAlignment="Top"/>
         <RadioButton Checked="RadioButton_Checked" Name="rbTransacTransfers" GroupName="Transactions" Content="Transfers" HorizontalAlignment="Left" Margin="628,119,0,0" VerticalAlignment="Top"/>
         <RadioButton Checked="RadioButton_Checked" Name="rbTransacPayments" GroupName="Transactions" Content="Payments" HorizontalAlignment="Left" Margin="708,119,0,0" VerticalAlignment="Top"/>
-        <ListView MouseDoubleClick="lvTransactions_MouseDoubleClick" Name="lvTransactions" HorizontalAlignment="Left" Height="223" Margin="410,150,0,0" VerticalAlignment="Top" Width="370">
+        <ListView MouseDoubleClick="lvTransactions_MouseDoubleClick" Name="lvTransactions" HorizontalAlignment="Left" Height="223" Margin="397,150,0,0" VerticalAlignment="Top" Width="445">
             <ListView.View>
                 <GridView>
+                    <GridView.ColumnHeaderContainerStyle>
+                        <Style TargetType="{x:Type GridViewColumnHeader}">
+                            <Setter Property="IsEnabled" Value="False"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsEnabled" Value="False">
+                                    <Setter Property="TextElement.Foreground" Value="Black"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </GridView.ColumnHeaderContainerStyle>
                     <GridViewColumn Header="Transaction Type" Width="120" DisplayMemberBinding="{Binding Type}"/>
                     <GridViewColumn Header="Date" Width="120" DisplayMemberBinding="{Binding Date, StringFormat=d}"/>
-                    <GridViewColumn Header="Amount" Width="100" DisplayMemberBinding="{Binding Amount, StringFormat=#.00}"/>
+                    <GridViewColumn Header="Amount" Width="100" DisplayMemberBinding="{Binding Amount, StringFormat=0.00}"/>
+                    <GridViewColumn Header="Balance" Width="100" DisplayMemberBinding="{Binding AccBalanceAfterTrans, StringFormat=0.00}"/>
                 </GridView>
             </ListView.View>
         </ListView>
