--- a/BankManagementSys/ManageAccounts.xaml
+++ b/BankManagementSys/ManageAccounts.xaml
@@ -60,7 +60,7 @@
         <RadioButton Name="rbLastName" Content="Last Name" GroupName="CustSearch" HorizontalAlignment="Left" Margin="232,94,0,0" VerticalAlignment="Top"/>
 
         <TextBox Name="tbSearchCustBy" KeyDown="tbSearchCustBy_KeyDown" HorizontalAlignment="Left" Height="23" Margin="334,61,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="183"/>
-        <Button Name="btFind" Click="btFind_Click" IsDefault="True" Content="Find" HorizontalAlignment="Left" Margin="546,64,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Name="btFind" Click="btFind_Click" IsDefault="True" Content="Find" HorizontalAlignment="Left" Margin="546,62,0,0" VerticalAlignment="Top" Width="75" Height="23"/>
         <Label Name="lblCustNotFound" Foreground="Red" Content="" HorizontalAlignment="Left" Margin="90,200,0,0" VerticalAlignment="Top"/>
         <ListView SelectionChanged="lvCustomers_SelectionChanged" Name="lvCustomers" Background="azure" HorizontalAlignment="Left" Height="99" Margin="90,128,0,0" VerticalAlignment="Top">
             <ListView.View>
