--- a/BankManagementSys/AdminDashboard.xaml
+++ b/BankManagementSys/AdminDashboard.xaml
@@ -18,6 +18,17 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
+        <Rectangle Fill="MediumSeaGreen" Stroke="#00695C" StrokeThickness="2.5"  x:Name="rectManageAccounts" HorizontalAlignment="center" Height="40" Margin="167,248,778,0"  VerticalAlignment="Top" Width="40" RenderTransformOrigin="0.5,0.5">
+            <Rectangle.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="133.339"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Rectangle.RenderTransform>
+        </Rectangle>
+
         <Rectangle Fill="MediumSeaGreen" Stroke="#00695C" StrokeThickness="2.5"  x:Name="rectViewUpdateClient" HorizontalAlignment="center" Height="40" Margin="167,208,778,0"  VerticalAlignment="Top" Width="40" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -56,22 +67,19 @@
             <Label Content="Logged as" FontFamily="Calibri" FontWeight="Bold" HorizontalContentAlignment="Center"/>
             <Label Name="lblAgenName" Content="" FontFamily="Calibri" FontWeight="Bold" HorizontalContentAlignment="Center"/>
         </StackPanel>
-
-
-        <Button Click="btValidationTest_Click" Name="btValidationTest" Content="Validation test" HorizontalAlignment="Left" Margin="800,376,0,0" VerticalAlignment="Top" Width="92"/>
         <Menu Margin="-1,169,790,0" Background="MediumSeaGreen" Name="mainMenu" Width="196">
             <Menu.ItemsPanel>
                 <ItemsPanelTemplate>
                     <VirtualizingStackPanel Orientation="Vertical"/>
                 </ItemsPanelTemplate>
             </Menu.ItemsPanel>
-            <MenuItem Header="Add New Client" Name="miAddClient" Click="miAddClient_Click" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="16" Height="41" Width="194" Foreground="White" >
+            <MenuItem Header="Home" Name="miHome" Click="miHome_Click" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="16" Height="41" Width="194" Foreground="White" >
                 <MenuItem.Icon>
                     <Image Source="/SharedCode;Component/Images/addPerson.png" />
                 </MenuItem.Icon>
             </MenuItem>
 
-            <MenuItem Header="View/Update Client" Name="miUpdateClient" Click="miUpdateClient_Click" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="16" Height="41" Width="194" Foreground="White">
+            <MenuItem Header="Manage Clients" Name="miUpdateClient" Click="miUpdateClient_Click" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="16" Height="41" Width="194" Foreground="White">
                 <MenuItem.Icon>
                     <Image Source="/SharedCode;Component/Images/manageClients.png" />
                 </MenuItem.Icon>
@@ -92,23 +100,10 @@
                     <Image Source="/SharedCode;Component/Images/exit.png"/>
                 </MenuItem.Icon>
             </MenuItem>
-
-        </Menu>
-        <Menu Margin="-1,169,790,1" Background="MediumSeaGreen" Name="accountsMenu" IsEnabled="False" Visibility="Hidden">
-            <Menu.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <VirtualizingStackPanel Orientation="Vertical"/>
-                </ItemsPanelTemplate>
-            </Menu.ItemsPanel>
-            <MenuItem Header="Create account" Name="miCreateAccount" Click="miCreateAccount_Click"  HorizontalAlignment="Left" VerticalAlignment="Center"  FontSize="16" Foreground="White" Height="41" Width="196"/>
-            <MenuItem Header="View/Update account" Name="miViewUpdateAccount" Click="miViewUpdateAccount_Click" HorizontalAlignment="Left" VerticalAlignment="Center"  FontSize="16" Foreground="White" Height="41" Width="196"/>
-            <MenuItem Header="Close account" Name="miCloseAccount" Click="miCloseAccount_Click" HorizontalAlignment="Left" VerticalAlignment="Center"  FontSize="16" Foreground="White" Height="41" Width="196"/>
-            <MenuItem Header="Statement" Name="miStatement" Click="miStatement_Click" HorizontalAlignment="Left" VerticalAlignment="Center"  FontSize="16" Foreground="White" Height="41" Width="196"/>
-            <MenuItem Header="Back to main menu" Name="miBackToMainMenu" Click="miBackToMainMenu_Click" HorizontalAlignment="Left" VerticalAlignment="Center"  FontSize="16" Foreground="White" Height="41" Width="196"/>
-
         </Menu>
 
-        <ContentControl Name="contentControl" HorizontalContentAlignment="Left" VerticalContentAlignment="Top"  Content="" HorizontalAlignment="Left" Margin="196,-1,0,0" VerticalAlignment="Top" Height="551" Width="789"/>
+
+        <ContentControl Name="contentControl" HorizontalContentAlignment="Left" VerticalContentAlignment="Top"  Content="" HorizontalAlignment="Left" Margin="195,-1,0,0" VerticalAlignment="Top" Height="551" Width="790"/>
 
     </Grid>
 </Window>
