--- a/BankManagementSys/UpdateCustomer.xaml
+++ b/BankManagementSys/UpdateCustomer.xaml
@@ -35,7 +35,7 @@
     </UserControl.Resources>
     <Grid>
         <Image Margin="22,19,635,418" Source="/SharedCode;Component/Images/updateClient.png"/>
-        <ListView Name="lvCustomers" SelectionChanged="lvCustomers_SelectionChanged" HorizontalAlignment="Left" Height="152" Margin="36,293,0,0" VerticalAlignment="Top">
+        <ListView Name="lvCustomers" SelectionChanged="lvCustomers_SelectionChanged" HorizontalAlignment="Left" Height="152" Margin="36,328,0,0" VerticalAlignment="Top">
             <ListView.View>
                 <GridView>
                     <GridView.ColumnHeaderContainerStyle>
@@ -53,19 +53,22 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Label Content="Search by" HorizontalAlignment="Left" Margin="35,171,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-        <TextBox Name="tbSearchCustBy" HorizontalAlignment="Left" Height="23" Margin="36,242,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="183"/>
-        <Button Click="btFind_Click" Name="btFind" IsDefault="True" Content="Find" HorizontalAlignment="Left" Margin="237,242,0,0" VerticalAlignment="Top" Width="89" Height="23"/>
+        <Label Content="Search by" HorizontalAlignment="Left" Margin="35,206,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <TextBox Name="tbSearchCustBy" HorizontalAlignment="Left" Height="23" Margin="36,277,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="183"/>
+        <Button Click="btFind_Click" Name="btFind" IsDefault="True" Content="Find" HorizontalAlignment="Left" Margin="237,277,0,0" VerticalAlignment="Top" Width="99" Height="23"/>
         <Label Content="" HorizontalAlignment="Left" Margin="737,47,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
         <Label Content="" HorizontalAlignment="Left" Margin="708,76,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
         <Label Content="" HorizontalAlignment="Left" Margin="748,106,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
         <Label Content="" HorizontalAlignment="Left" Margin="751,136,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
-        <RadioButton Name="rbNatId" Content="National Id" GroupName="CustSearch" IsChecked="True" HorizontalAlignment="Left" Margin="114,163,0,0" VerticalAlignment="Top"/>
-        <RadioButton Name="rbAccNo" Content="Account No" GroupName="CustSearch" HorizontalAlignment="Left" Margin="114,185,0,0" VerticalAlignment="Top"/>
-        <RadioButton Name="rbLastName" Content="Last Name" GroupName="CustSearch" HorizontalAlignment="Left" Margin="114,208,0,0" VerticalAlignment="Top"/>
-        <Label Foreground="Red" Name="lblEmptyResult" Content="" HorizontalAlignment="Left" Margin="39,450,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.316,0.077" Width="444"/>
+        <RadioButton Name="rbNatId" Content="National Id" GroupName="CustSearch" IsChecked="True" HorizontalAlignment="Left" Margin="114,198,0,0" VerticalAlignment="Top"/>
+        <RadioButton Name="rbAccNo" Content="Account No" GroupName="CustSearch" HorizontalAlignment="Left" Margin="114,220,0,0" VerticalAlignment="Top"/>
+        <RadioButton Name="rbLastName" Content="Last Name" GroupName="CustSearch" HorizontalAlignment="Left" Margin="114,243,0,0" VerticalAlignment="Top"/>
+        <Label Foreground="Red" Name="lblEmptyResult" Content="" HorizontalAlignment="Left" Margin="39,484,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.316,0.077" Width="444"/>
         <StackPanel Margin="355,0,10,0" Background="azure"/>
         <ContentControl Name="contentControl" Content="" HorizontalAlignment="Left" Margin="370,7,0,0" VerticalAlignment="Top" Height="533" Width="387"/>
-        
+        <Button  x:Name="btAddNewClient" Click="btAddNewClient_Click" IsDefault="True" Content="Add new client" HorizontalAlignment="Left" Margin="219,96,0,0" VerticalAlignment="Top" Width="107" Height="27"/>
+        <Label Content="View/Update existing client" HorizontalAlignment="Left" Margin="31,148,0,0" VerticalAlignment="Top" FontSize="14" FontStyle="Italic"/>
+        <Rectangle Fill="#00695C" HorizontalAlignment="Left" Height="4" Margin="35,179,0,0" VerticalAlignment="Top" Width="301"/>
+
     </Grid>
 </UserControl>
